--- a/dashboard.html
+++ b/dashboard.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard - Resource Library</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Project: Resource Manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
     <h1>My Personal Resource Library</h1>
-    <button id="logoutBtn">Logout</button>
+    <p>Viewing personal collection</p> 
 </header>
 
 <section class="controls">
-    <input type="text" id="searchInput" placeholder="Search resources (Enter title or note)">
+    <input type="text" id="searchInput" placeholder="Search resources...">
 </section>
 
 <section class="add-resource">
@@ -26,15 +26,14 @@
 </section>
 
 <section id="resourceList" class="resource-list">
-    <!-- Resource cards will appear here -->
-</section>
+    </section>
 
-<script src="login.js"></script>
 <script src="dataController.js"></script>
 <script src="dashboard.js"></script>
+
 <script>
-    checkAuth(); // Protect page
-    document.getElementById("logoutBtn").addEventListener("click", logout);
+    // Remove checkAuth() 
+    console.log("Dashboard loaded successfully.");
 </script>
 
 </body>
